--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 javaStudy/Java/Java_Test_25-04/
 javaStudy/Project/BookSsak/
+javaStudy/Project/CH_Project_Fx/
+javaStudy/Project/MiniGame/
 
 javaStudy/강의자료/employees/load_salaries.dump
