--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ javaStudy/Java/Java_Test_25-04/
 javaStudy/Project/BookSsak/
 javaStudy/Project/CH_Project_Fx/
 javaStudy/Project/MiniGame/
+javaStudy/SpringBoot/SpringBoot_Test_25-06
 
 javaStudy/강의자료/employees/load_salaries.dump
