--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ javaStudy/Project/BookSsak/
 javaStudy/Project/CH_Project_Fx/
 javaStudy/Project/MiniGame/
 javaStudy/SpringBoot/SpringBoot_Test_25-06
+javaStudy/Project/JoinMe_Project/
 
 javaStudy/강의자료/employees/load_salaries.dump
