--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
+# 프로젝트 구조
 javaStudy/Java/Java_Test_25-04/
 javaStudy/Project/BookSsak/
 javaStudy/Project/CH_Project_Fx/
 javaStudy/Project/MiniGame/
 javaStudy/SpringBoot/SpringBoot_Test_25-06
 javaStudy/Project/JoinMe_Project/
-
 javaStudy/강의자료/employees/load_salaries.dump
 
+# Flutter 전용 파일들은 개별 Flutter 폴더 안 .gitignore로 관리
+# (상위에서는 너무 범용적인 무시 규칙 제거)
 
-
-# Flutter/Dart 관련
-.dart_tool/
-.packages
-.pub-cache/
-build/
-flutter_*.png
-*.lock
-
-# VS Code / IntelliJ / Android Studio 관련
+# VS Code / IntelliJ / Android Studio 관련 (공통 설정)
 .idea/
 *.iml
 .vscode/
@@ -35,7 +28,7 @@ android/.gradle/
 android/app/build/
 android/local.properties
 
-# 기타
+# 기타 무시
 *.log
 *.psd
 *.ipa
