--- a/javaStudy/React_study/img_swiper/package.json
+++ b/javaStudy/React_study/img_swiper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customer_admin",
+  "name": "img_swiper",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,13 +8,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
