꽁냥_커플프로필작성, 로그아웃

--- a/javaStudy/Project/KkongNyang/backend/src/main/resources/application.properties
+++ b/javaStudy/Project/KkongNyang/backend/src/main/resources/application.properties
@@ -36,8 +36,8 @@ logging.level.org.springframework.security=DEBUG
 #
 #kakao.redirect-uri=${server.ip}/api/login/oauth2/code/kakao
 
-#spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.file-size-threshold=2KB
-#spring.servlet.multipart.max-file-size=10MB
-#spring.servlet.multipart.max-request-size=15MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
 
